--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -914,19 +914,9 @@
     #1~error
   }
 \cs_new:Npn \msg_warning_text:n #1
-  {
-    \exp_args:Nf \tl_if_blank:nF { \msg_module_type:n {#1} }
-      { \msg_module_type:n {#1} ~ }
-    \msg_module_name:n {#1} ~
-    Warning
-  }
+  { \@@_text:nn {#1} { Warning } }
 \cs_new:Npn \msg_info_text:n #1
-  {
-    \exp_args:Nf \tl_if_blank:nF { \msg_module_type:n {#1} }
-      { \msg_module_type:n {#1} ~ }
-    \msg_module_name:n {#1} ~
-    Info
-  }
+  { \@@_text:nn {#1} { Info } }
 \cs_new:Npn \@@_text:nn #1#2
   {
     \exp_arg:Nf \@@_text:n { \msg_module_type:n {#1} }
