Correct a function name

--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -919,7 +919,7 @@
   { \@@_text:nn {#1} { Info } }
 \cs_new:Npn \@@_text:nn #1#2
   {
-    \exp_arg:Nf \@@_text:n { \msg_module_type:n {#1} }
+    \exp_args:Nf \@@_text:n { \msg_module_type:n {#1} }
     \msg_module_name:n {#1} ~
     #2
   }
