Use a variant rather than \use:x
Will need the variant for errors, which are a bit trickier than other messages.

--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1141,24 +1141,21 @@
       \str_set:Nx \l_@@_text_str { \msg_warning_text:n {#1} }
       \str_set:Nx \l_@@_name_str { \msg_module_name:n {#1} }
       \iow_term:n { }
-      \use:x
+      \iow_wrap:nxnN
         {
-          \iow_wrap:nnnN
-            {
-              \l_@@_text_str : ~
-              \exp_not:c { \c_@@_text_prefix_tl #1 / #2 } {#3} {#4} {#5} {#6}
-            }
-            {
-              ( \l_@@_name_str )
-              \prg_replicate:nn
-                {
-                    \str_count:N \l_@@_text_str
-                  - \str_count:N \l_@@_name_str
-                }
-                { ~ }
-            }
-            { } \iow_term:n
+          \l_@@_text_str : ~
+          \use:c { \c_@@_text_prefix_tl #1 / #2 } {#3} {#4} {#5} {#6}
         }
+        {
+          ( \l_@@_name_str )
+          \prg_replicate:nn
+            {
+                \str_count:N \l_@@_text_str
+              - \str_count:N \l_@@_name_str
+            }
+            { ~ }
+        }
+        { } \iow_term:n
       \iow_term:n { }
     }
 %    \end{macrocode}
@@ -1183,24 +1180,21 @@
       \str_set:Nx \l_@@_text_str { \msg_info_text:n {#1} }
       \str_set:Nx \l_@@_name_str { \msg_module_name:n {#1} }
       \iow_log:n { }
-      \use:x
+      \iow_wrap:nxnN
         {
-          \iow_wrap:nnnN
-            {
-              \l_@@_text_str : ~
-              \exp_not:c { \c_@@_text_prefix_tl #1 / #2 } {#3} {#4} {#5} {#6}
-            }
-            {
-              ( \l_@@_name_str )
-              \prg_replicate:nn
-                {
-                    \str_count:N \l_@@_text_str
-                  - \str_count:N \l_@@_name_str
-                }
-                { ~ }
-            }
-            { } \iow_log:n
+          \l_@@_text_str : ~
+          \use:c { \c_@@_text_prefix_tl #1 / #2 } {#3} {#4} {#5} {#6}
         }
+        {
+          ( \l_@@_name_str )
+          \prg_replicate:nn
+             {
+                 \str_count:N \l_@@_text_str
+               - \str_count:N \l_@@_name_str
+             }
+            { ~ }
+         }
+         { } \iow_log:n
       \iow_log:n { }
     }
 %    \end{macrocode}
