--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -887,7 +887,7 @@
   }
 \cs_new:Npn \msg_see_documentation_text:n #1
   {
-    \\ \\ See~the~ \msg_module_name:n {#1} ~
+    See~the~ \msg_module_name:n {#1} ~
     documentation~for~further~information.
   }
 %    \end{macrocode}
@@ -957,6 +957,7 @@
         { \msg_fatal_text:n {#1} : ~ "#2" }
         {
           \use:c { \c_@@_text_prefix_tl #1 / #2 } {#3} {#4} {#5} {#6}
+          \\ \\
           \msg_see_documentation_text:n {#1}
         }
         { \c_@@_fatal_text_tl }
@@ -985,6 +986,7 @@
         { \msg_critical_text:n {#1} : ~ "#2" }
         {
           \use:c { \c_@@_text_prefix_tl #1 / #2 } {#3} {#4} {#5} {#6}
+          \\ \\
           \msg_see_documentation_text:n {#1}
         }
         { \c_@@_critical_text_tl }
@@ -1020,6 +1022,7 @@
             { \msg_error_text:n {#1} : ~ "#2" }
             {
               \use:c { \c_@@_text_prefix_tl #1 / #2 } {#3} {#4} {#5} {#6}
+              \\ \\
               \msg_see_documentation_text:n {#1}
             }
        }
