Copy \msg_interrupt:nn internals
These are needed for the deprecated version:
code update will change the output otherwise.

--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -2089,12 +2089,64 @@
   {
     \tl_if_empty:nTF {#3}
       {
-        \@@_interrupt_wrap:nn { \\ \c_@@_no_info_text_tl }
+        \@@_old_interrupt_wrap:nn { \\ \c_@@_no_info_text_tl }
           {#1 \\\\ #2 \\\\ \c_@@_continue_text_tl }
       }
       {
-        \@@_interrupt_wrap:nn { \\ #3 }
+        \@@_old_interrupt_wrap:nn { \\ #3 }
           {#1 \\\\ #2 \\\\ \c_@@_help_text_tl }
+      }
+  }
+\cs_new_protected:Npn \@@_old_interrupt_wrap:nn #1#2
+  {
+    \iow_wrap:nnnN {#1} { | ~ } { } \@@_old_interrupt_more_text:n
+    \iow_wrap:nnnN {#2} { ! ~ } { } \@@_old_interrupt_text:n
+  }
+\cs_new_protected:Npn \@@_old_interrupt_more_text:n #1
+  {
+    \exp_args:Nx \tex_errhelp:D
+      {
+        |'''''''''''''''''''''''''''''''''''''''''''''''
+        #1 \iow_newline:
+        |...............................................
+      }
+  }
+\group_begin:
+  \char_set_lccode:nn {`\{} {`\ }
+  \char_set_lccode:nn {`\}} {`\ }
+  \char_set_lccode:nn {`\&} {`\!}
+  \char_set_catcode_active:N \&
+\tex_lowercase:D
+  {
+    \group_end:
+    \cs_new_protected:Npn \@@_old_interrupt_text:n #1
+      {
+        \iow_term:x
+          {
+            \iow_newline:
+            !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
+            \iow_newline:
+            !
+          }
+        \__kernel_iow_with:Nnn \tex_newlinechar:D { `\^^J }
+          {
+            \__kernel_iow_with:Nnn \tex_errorcontextlines:D { -1 }
+              {
+                \group_begin:
+                  \cs_set_protected:Npn &
+                    {
+                      \tex_errmessage:D
+                        {
+                          #1
+                          \use_none:n
+                            { ............................................ }
+                        }
+                    }
+                  \exp_after:wN
+                \group_end:
+                &
+              }
+          }
       }
   }
 %    \end{macrocode}
