Terminate expansion in \iow_wrap:nnnN correctly (fixes #491)

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1608,6 +1608,7 @@
 %   {
 %     \@@_wrap_line_loop:w,
 %     \@@_wrap_line_aux:Nw,
+%     \@@_wrap_line_seven:nnnnnnn,
 %     \@@_wrap_line_end:NnnnnnnnN,
 %     \@@_wrap_line_end:nw,
 %     \@@_wrap_end_chunk:w
@@ -1632,7 +1633,9 @@
 %   |#2|--|#9| of the \texttt{line_loop} auxiliary or as one of the
 %   arguments |#2|--|#8| of the \texttt{line_end} auxiliary.  In both
 %   cases stop the assignment and work out how many characters are still
-%   needed.  The weird \cs{use_none:nnnnn} ensures that the required
+%   needed. Notice that when we have exactly seven arguments to clean up,
+%   a \cs{exp_stop_f:} has to be inserted to stop the \cs{exp:w}.
+%   The weird \cs{use_none:nnnnn} ensures that the required
 %   data is in the right place.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_wrap_line:nw #1
@@ -1666,10 +1669,11 @@
     \or: \use_none:nnnn
     \or: \use_none:nnnnn
     \or: \use_none:nnnnnn
-    \or: \use_none:nnnnnnn
+    \or: \@@_wrap_line_seven:nnnnnnn
     \fi:
     { } { } { } { } { } { } { } #3
   }
+\cs_new:Npn \@@_wrap_line_seven:nnnnnnn #1#2#3#4#5#6#7 { \exp_stop_f: }
 \cs_new:Npn \@@_wrap_line_end:NnnnnnnnN #1#2#3#4#5#6#7#8#9
   {
     #2 #3 #4 #5 #6 #7 #8
