Add timer functions to l3luatex Lua code
This will enable l3benchmark to use our own code, rather than
pdftexcmds.

--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -131,6 +131,14 @@
 %   the result to \TeX{}.
 % \end{function}
 %
+% \begin{function}{l3kernel.elapsedtime}
+%   \begin{syntax}
+%     |l3kernel.elapsedtime||()|
+%   \end{syntax}
+%  Returns the time in \meta{scaled seconds} since the start of the \TeX{} run
+%  or since |l3kernel.resettimer| was issued.
+% \end{function}
+%
 % \begin{function}{l3kernel.filemdfivesum}
 %   \begin{syntax}
 %     |l3kernel.filemdfivesum||(|\meta{file}|)|
@@ -162,6 +170,13 @@
 %   \end{syntax}
 %   Returns the size of the \meta{file} in bytes. If the \meta{file} is not
 %   found, nothing is returned with \emph{no error raised}.
+% \end{function}
+%
+% \begin{function}{l3kernel.resettimer}
+%   \begin{syntax}
+%     |l3kernel.resettimer||()|
+%   \end{syntax}
+%  Resets the timer used by |l3kernel.elapsetime|.
 % \end{function}
 %
 % \begin{function}{l3kernel.strcmp}
@@ -322,6 +337,7 @@ local kpse_find  = kpse.find_file
 local lfs_attr   = lfs.attributes
 local md5_sum    = md5.sum
 local open       = io.open
+local os_clock   = os.clock
 local os_date    = os.date
 local setcatcode = tex.setcatcode
 local str_format = string.format
@@ -354,6 +370,26 @@ local function charcat(charcode, catcode)
   sprint(charcat_table, utf8_char(charcode))
 end
 l3kernel.charcat = charcat
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{l3kernel.elapsedtime, l3kernel.resettimer}
+%   Simple timing set up: give the result from the system clock in scaled
+%   seconds.
+%    \begin{macrocode}
+local base_time = 0
+local function elapsedtime()
+  local val = (os_clock() - base_time) * 65536 + 0.5
+  if val > 2147483647 then
+    val = 2147483647
+  end
+  write(format("%d",val))
+end
+l3kernel.elapsedtime = elapsedtime
+local function resettimer()
+  base_time = 0
+end
+l3kernel.resettimer = resettimer
 %    \end{macrocode}
 % \end{macro}
 %
