--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -125,7 +125,7 @@
 %
 % \begin{function}{l3kernel.charcat}
 %   \begin{syntax}
-%     |l3kernel.charcat||(|\meta{charcode}, \meta{catcode}|)|
+%     |l3kernel.charcat(|\meta{charcode}, \meta{catcode}|)|
 %   \end{syntax}
 %   Constructs a character of \meta{charcode} and \meta{catcode} and returns
 %   the result to \TeX{}.
@@ -133,7 +133,7 @@
 %
 % \begin{function}{l3kernel.elapsedtime}
 %   \begin{syntax}
-%     |l3kernel.elapsedtime||()|
+%     |l3kernel.elapsedtime()|
 %   \end{syntax}
 %  Returns the time in \meta{scaled seconds} since the start of the \TeX{} run
 %  or since |l3kernel.resettimer| was issued.
@@ -141,7 +141,7 @@
 %
 % \begin{function}{l3kernel.filemdfivesum}
 %   \begin{syntax}
-%     |l3kernel.filemdfivesum||(|\meta{file}|)|
+%     |l3kernel.filemdfivesum(|\meta{file}|)|
 %   \end{syntax}
 %   Returns the of the MD5 sum of the file contents read as bytes; note that
 %   the result will depend on the nature of the line endings used in the file,
@@ -151,7 +151,7 @@
 %
 % \begin{function}{l3kernel.filemoddate}
 %   \begin{syntax}
-%     |l3kernel.filemoddate||(|\meta{file}|)|
+%     |l3kernel.filemoddate(|\meta{file}|)|
 %   \end{syntax}
 %   Returns the of the date/time of last modification of the \meta{file} in the
 %   format
@@ -166,7 +166,7 @@
 %
 % \begin{function}{l3kernel.filesize}
 %   \begin{syntax}
-%     |l3kernel.filesize||(|\meta{file}|)|
+%     |l3kernel.filesize(|\meta{file}|)|
 %   \end{syntax}
 %   Returns the size of the \meta{file} in bytes. If the \meta{file} is not
 %   found, nothing is returned with \emph{no error raised}.
@@ -174,14 +174,14 @@
 %
 % \begin{function}{l3kernel.resettimer}
 %   \begin{syntax}
-%     |l3kernel.resettimer||()|
+%     |l3kernel.resettimer()|
 %   \end{syntax}
 %  Resets the timer used by |l3kernel.elapsetime|.
 % \end{function}
 %
 % \begin{function}{l3kernel.strcmp}
 %   \begin{syntax}
-%     |l3kernel.strcmp||(|\meta{str one}, \meta{str two}|)|
+%     |l3kernel.strcmp(|\meta{str one}, \meta{str two}|)|
 %   \end{syntax}
 %   Compares the two strings and returns |0| to \TeX{}
 %   if the two are identical.
