Simplify l3benchmark set up

--- a/l3trial/l3benchmark/l3benchmark.dtx
+++ b/l3trial/l3benchmark/l3benchmark.dtx
@@ -191,14 +191,7 @@ end
     \RequirePackage{pdftexcmds} \scan_stop:
     \cs_new_eq:NN \@@_timer: \pdf@elapsedtime
   }
-  {
-    \cs_if_exist:NTF \tex_elapsedtime:D
-      { \cs_new_eq:NN \@@_timer: \tex_elapsedtime:D }
-      {
-        \cs_if_exist:NT \pdfelapsedtime
-          { \cs_new_eq:NN \@@_timer: \pdfelapsedtime }
-      }
-  }
+  { \cs_new_eq:NN \@@_timer: \tex_elapsedtime:D }
 \@@_const:nn { sys_if_timer_exist }
   { \cs_if_exist_p:N \@@_timer: || \sys_if_shell_unrestricted_p: }
 %    \end{macrocode}
@@ -206,12 +199,11 @@ end
 % \end{macro}
 %
 % \begin{macro}{\sys_timer_gzero:, \sys_timer_apply:N, \@@_timer:, \@@_timer_fp:}
-% \begin{variable}{\g_@@_timer_base_int, \g_@@_timer_base_fp}
+% \begin{variable}{\g_@@_timer_base_fp}
 %   Three case, and in each case we define \cs{sys_timer_gzero:} then
 %   \cs{sys_timer_apply:N}.  If \cs{@@_timer:} exists then it is safe to
 %   use the corresponding \enquote{resettimer} code for
-%   \cs{sys_timer_gzero:}, or as a fall-back use
-%   \cs{g_@@_timer_base_int} as an offset.
+%   \cs{sys_timer_gzero:}.
 %    \begin{macrocode}
 \cs_if_exist:NTF \@@_timer:
   {
@@ -220,27 +212,7 @@ end
       {
         \cs_if_exist:NTF \tex_resettimer:D
           { \cs_new_eq:NN \sys_timer_gzero: \tex_resettimer:D }
-          {
-            \cs_if_exist:NTF \pdfresettimer
-              { \cs_new_eq:NN \sys_timer_gzero: \pdfresettimer }
-              {
-                \int_new:N \g_@@_timer_base_int
-                \cs_new_protected:Npn \sys_timer_gzero:
-                  { \int_gset:Nn \g_@@_timer_base_int { \@@_timer: } }
-              }
-          }
-      }
-    \int_if_exist:NTF \g_@@_timer_base_int
-      {
-        \cs_new_protected:Npn \sys_timer_apply:N #1
-          {
-            \exp_args:Nf #1
-              { \int_eval:n { \@@_timer: - \g_@@_timer_base_int } }
-          }
-      }
-      {
-        \cs_new_protected:Npn \sys_timer_apply:N #1
-          { \exp_args:No #1 { \int_value:w \@@_timer: } }
+          { \cs_new_eq:NN \sys_timer_gzero: \pdfresettimer }
       }
   }
 %    \end{macrocode}
