Add a sanity check for message wrapping
See https://tex.stackexchange.com/q/456558

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1500,6 +1500,15 @@
       \int_set:Nn \l_@@_line_target_int
         { \l_iow_line_count_int - \str_count:N \l_@@_newline_tl + 1 }
 %    \end{macrocode}
+%   Sanity check.
+%    \begin{macrocode}
+       \int_compare:nNnT { \l_@@_line_target_int } < 0
+         {
+           \tl_set:Nn \l_@@_newline_tl { \iow_newline: }
+           \int_set:Nn \l_@@_line_target_int
+             { \l_iow_line_count_int + 1 }
+         }
+%    \end{macrocode}
 %   There is then a loop over the input, which stores the wrapped
 %   result in \cs{l_@@_wrap_tl}.  After the loop, the resulting text is
 %   passed on to the function which has been given as a post-processor.
