--- a/l3experimental/l3benchmark/l3benchmark.dtx
+++ b/l3experimental/l3benchmark/l3benchmark.dtx
@@ -269,12 +269,7 @@
   {
     \msg_new:nnnn { benchmark } { no-time }
       { The~l3benchmark~package~failed~to~access~a~clock. }
-      {
-        The~current~engine~provides~no~way~to~access~the~system~time,~
-        hence~making~benchmarking~impossible~without~shell-escape.~
-        Please~use~pdfTeX,~LuaTeX,~or~call~other~engines~with~the~
-        --shell-escape~option.
-      }
+      { The~current~engine~provides~no~way~to~access~the~system~time. }
     \cs_new_protected:Npn \benchmark_once:n #1
       { \msg_error:nn { benchmark } { no-time } }
     \cs_new_protected:Npn \benchmark_once_in_ops:n #1
