Ensure benchmark "op" time is non-zero
On my system, at least, I get random divide-by-zero
errors due to this coming out too small.

--- a/l3experimental/l3benchmark/l3benchmark.dtx
+++ b/l3experimental/l3benchmark/l3benchmark.dtx
@@ -425,6 +425,8 @@
       { \int_gset:Nn \g_@@_duration_int { 256 } } % arbitrary single operation
     \@@_aux:
     \fp_gset_eq:NN \g_@@_one_op_fp \g_benchmark_time_fp
+    \fp_compare:nNnT \g_@@_one_op_fp < { 1e-6 }
+      { \fp_gset:Nn \g_@@_one_op_fp { 1e-6 } }
   }
 \cs_new_protected:Npn \benchmark_silent:n #1
   {
