--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -421,6 +421,14 @@
 %   This is not yet available in \XeTeX{}.
 % \end{function}
 %
+% \begin{function}[EXP, added = 2018-11-03]{\int_sign:n}
+%   \begin{syntax}
+%     \cs{int_sign:n} \Arg{intexpr}
+%   \end{syntax}
+%   Evaluates the \meta{integer expression} then leaves $1$ or $0$ or
+%   $-1$ in the input stream according to the sign of the result.
+% \end{function}
+%
 % \section{Additions to \pkg{l3intarray}}
 %
 % \begin{function}[EXP, added = 2018-05-05]{\intarray_rand_item:N}
@@ -2302,6 +2310,39 @@
     \if_cs_exist:w flag~#1~0 \cs_end:
     \else:
       \cs:w flag~#1 \cs_end: 0 ;
+    \fi:
+  }
+%    \end{macrocode}
+% \end{macro}
+%
+% \subsection{Additions to \pkg{l3msg}}
+%
+%    \begin{macrocode}
+%<@@=int>
+%    \end{macrocode}
+%
+% \begin{macro}[EXP]{\int_sign:n, \@@_sign:Nw}
+%   See \cs{int_abs:n}.  Evaluate the expression once (and when
+%   debugging is enabled, check that the expression is well-formed),
+%   then test the first character to determine the sign.  This is
+%   wrapped in \cs{int_value:w} \ldots{} \cs{exp_stop_f:} to ensure a
+%   fixed number of expansions and to avoid dealing with closing the
+%   conditionals.
+%    \begin{macrocode}
+\__kernel_patch_args:nNNpn
+  { { \__kernel_chk_expr:nNnN {#1} \@@_eval:w { } \int_sign:n } }
+\cs_new:Npn \int_sign:n #1
+  {
+    \int_value:w \exp_after:wN \@@_sign:Nw
+      \int_value:w \@@_eval:w #1 \@@_eval_end: ;
+    \exp_stop_f:
+  }
+\cs_new:Npn \@@_sign:Nw #1#2 ;
+  {
+    \if_meaning:w 0 #1
+      0
+    \else:
+      \if_meaning:w - #1 - \fi: 1
     \fi:
   }
 %    \end{macrocode}
